@@ -3,7 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>org.cryptomator</groupId>
 	<artifactId>fuse-nio-adapter</artifactId>
-	<version>1.3.2</version>
+	<version>1.3.3</version>
 	<name>FUSE-NIO-Adapter</name>
 	<description>Access resources at a given NIO path via FUSE.</description>
 	<url>https://github.com/cryptomator/fuse-nio-adapter</url>
@@ -19,9 +19,9 @@
 		<maven.compiler.release>11</maven.compiler.release>
 
 		<!-- dependencies -->
-		<jnrfuse.version>0.5.5</jnrfuse.version>
+		<jnrfuse.version>0.5.7</jnrfuse.version>
 		<!-- TODO: bump dependency once this project has a proper module.info -->
-		<dagger.version>2.36</dagger.version>
+		<dagger.version>2.39.1</dagger.version>
 		<guava.version>30.1.1-jre</guava.version>
 		<slf4j.version>1.7.32</slf4j.version>
 		
@@ -124,11 +124,6 @@
 			<name>Maven Central Repo</name>
 			<url>https://repo.maven.apache.org/maven2</url>
 		</repository>
-		<repository>
-			<id>google-maven</id>
-			<name>Google Maven Repo</name>
-			<url>https://maven.google.com</url>
-		</repository>
 	</repositories>
 
 	<build>
@@ -149,7 +144,7 @@
 			</plugin>
 			<plugin>
 				<artifactId>maven-surefire-plugin</artifactId>
-				<version>2.22.2</version>
+				<version>3.0.0-M5</version>
 			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
@@ -177,7 +172,7 @@
 			</plugin>
 			<plugin>
 				<artifactId>maven-javadoc-plugin</artifactId>
-				<version>3.2.0</version>
+				<version>3.3.1</version>
 				<executions>
 					<execution>
 						<id>attach-javadocs</id>
@@ -186,6 +181,24 @@
 						</goals>
 					</execution>
 				</executions>
+				<configuration>
+					<sourceFileExcludes>
+						<sourceFileExclude>**/*_*</sourceFileExclude>
+						<sourceFileExclude>**/Dagger*</sourceFileExclude>
+					</sourceFileExcludes>
+					<!-- All this configuration is required until we can properly modularize this lib -->
+					<additionalDependencies>
+						<additionalDependency>
+							<groupId>jakarta.inject</groupId>
+							<artifactId>jakarta.inject-api</artifactId>
+							<version>1.0.3</version>
+						</additionalDependency>
+					</additionalDependencies>
+					<additionalOptions>
+						<option>--add-modules</option>
+						<option>java.xml,java.compiler</option>
+					</additionalOptions>
+				</configuration>
 			</plugin>
 		</plugins>
 	</build>
@@ -198,7 +211,7 @@
 					<plugin>
 						<groupId>org.owasp</groupId>
 						<artifactId>dependency-check-maven</artifactId>
-						<version>6.1.2</version>
+						<version>6.4.1</version>
 						<configuration>
 							<cveValidForHours>24</cveValidForHours>
 							<failBuildOnCVSS>0</failBuildOnCVSS>
@@ -227,7 +240,7 @@
 					<plugin>
 						<groupId>org.jacoco</groupId>
 						<artifactId>jacoco-maven-plugin</artifactId>
-						<version>0.8.6</version>
+						<version>0.8.7</version>
 						<executions>
 							<execution>
 								<id>prepare-agent</id>
@@ -253,7 +266,7 @@
 				<plugins>
 					<plugin>
 						<artifactId>maven-gpg-plugin</artifactId>
-						<version>1.6</version>
+						<version>3.0.1</version>
 						<executions>
 							<execution>
 								<id>sign-artifacts</id>
